--- a/index.html
+++ b/index.html
@@ -1,6 +1,29 @@
+<html lang="pr-BR">
+
+<head> 
+   <link rel=" stylesheet" href=" styles.css">
+   <title>playlist-da-anna</title>
+
+</head>
+
 <body>
-<header>Playlist da Anna</header>
-<h1>Mc Kevin- Sentimento</h1> 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/fL1V7yOiV7U?si=BcFQdwMIzUTTgr1k" title="YouTube video player" frameborder="0" allow="accelerometer
-; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
- <body>
+   
+    <header>Playlist da Anna</header>
+   
+   
+ <div>
+    <h1>Mc Kevin- Sentimento</h1>
+</div>
+   
+  <div>
+   <iframe width="560" height="315" src="https://www.youtube.com/embed/fL1V7yOiV7U?si=BcFQdwMIzUTTgr1k"
+        title="YouTube video player" frameborder="0" allow="accelerometer
+autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div> 
+
+
+</body>
+
+
+</html>
